@@ -19,7 +19,6 @@ import static com.asyncapi.bindings.http.v0._3_0.operation.HTTPOperationMethod.P
 import static com.asyncapi.bindings.http.v0._3_0.operation.HTTPOperationMethod.PUT;
 import static com.fasterxml.jackson.annotation.JsonInclude.Include.NON_NULL;
 
-import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -29,12 +28,12 @@ import java.util.concurrent.ExecutionException;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import jakarta.json.Json;
-import jakarta.json.JsonArray;
 import jakarta.json.JsonObject;
 import jakarta.json.JsonValue;
 
 import com.asyncapi.bindings.http.v0._3_0.operation.HTTPOperationBinding;
+import com.asyncapi.bindings.kafka.v0._5_0.channel.KafkaChannelBinding;
+import com.asyncapi.bindings.kafka.v0._5_0.channel.KafkaChannelTopicCleanupPolicy;
 import com.asyncapi.schemas.asyncapi.Reference;
 import com.asyncapi.schemas.asyncapi.security.v3.oauth2.OAuth2SecurityScheme;
 import com.asyncapi.schemas.asyncapi.security.v3.oauth2.OAuthFlows;
@@ -54,7 +53,6 @@ import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 
 import io.aklivity.zillabase.service.api.gen.internal.asyncapi.AsyncapiKafkaFilter;
-import io.aklivity.zillabase.service.api.gen.internal.asyncapi.KafkaTopicSchemaRecord;
 import io.aklivity.zillabase.service.api.gen.internal.asyncapi.ZillaHttpOperationBinding;
 import io.aklivity.zillabase.service.api.gen.internal.asyncapi.ZillaSseKafkaOperationBinding;
 import io.aklivity.zillabase.service.api.gen.internal.asyncapi.ZillaSseOperationBinding;
@@ -78,68 +76,70 @@ public class HttpAsyncApiBuilder
         this.scopes = new ArrayList<>();
     }
 
-    public String buildYamlSpec(
-        String kafkaAsyncApiYaml) throws JsonProcessingException, ExecutionException, InterruptedException
+    public String buildSpec(
+        String kafkaSpec) throws Exception
     {
-        BuildContext context = new BuildContext();
-        parseInput(kafkaAsyncApiYaml, context);
-        parseChannels(context);
-        parseMessagesAndSchemas(context);
-        buildSecurity(context);
-        return finalizeSpec(context);
+        AsyncAPI kafkaApi = deserializeAsyncapi(kafkaSpec);
+
+        AsyncapiSpecBuilder<AsyncapiSpec> builder = AsyncapiSpec.builder()
+            .inject(spec -> spec.asyncapi("3.0.0"))
+            .inject(this::injectInfo)
+            .inject(this::injectServers)
+            .inject(ctx -> injectChannels(ctx, kafkaApi))
+            .inject(ctx -> createOperations(ctx, kafkaApi))
+            .inject(this::injectComponents);
+
+        AsyncapiSpec spec = builder.build();
+
+        return buildYaml(spec);
     }
 
-    private void parseInput(
-        String kafkaAsyncapi,
-        BuildContext context) throws JsonProcessingException
+    private <C> AsyncapiSpecBuilder<C> injectInfo(
+        AsyncapiSpecBuilder<C> builder)
     {
-        context.components = new Components();
-        context.servers = buildServers();
-        context.info = buildInfo();
-        context.channels = new HashMap<>();
-        context.operations = new HashMap<>();
-        context.messages = new HashMap<>();
-        context.schemas = new HashMap<>();
-        scopes.clear();
-
-        ObjectMapper yamlMapper = new ObjectMapper(new YAMLFactory());
-        JsonNode yamlRoot = yamlMapper.readTree(kafkaAsyncapi);
-        ObjectMapper jsonMapper = new ObjectMapper();
-        String asJsonString = jsonMapper.writeValueAsString(yamlRoot);
-        context.kafkaJson = Json.createReader(new StringReader(asJsonString)).readObject();
+        Info info = Info.builder()
+            .title("API Document for REST APIs")
+            .version("1.0.0")
+            .license(new License(
+                "Aklivity Community License",
+                "https://github.com/aklivity/zillabase/blob/develop/LICENSE"
+            ))
+            .build();
+        return builder.info(info);
     }
 
-    private void parseChannels(
-        BuildContext context) throws JsonProcessingException, ExecutionException, InterruptedException
+    private <C> AsyncapiSpecBuilder<C> injectServers(
+        AsyncapiSpecBuilder<C> builder)
     {
-        JsonObject channelsJson = context.kafkaJson.getJsonObject("channels");
-        if (channelsJson != null)
+        Reference securityRef = new Reference("#/components/securitySchemes/httpOauth");
+        Server server = Server.builder()
+            .host("localhost:8080")
+            .protocol("http")
+            .security(List.of(securityRef))
+            .build();
+
+        return builder.servers(Map.of("http", server));
+    }
+
+    private <C> AsyncapiSpecBuilder<C> injectChannels(
+        AsyncapiSpecBuilder<C> builder,
+        AsyncAPI kafkaApi)
+    {
+        Map<String, Object> channels = kafkaApi.getChannels();
+        for (Map.Entry<String, Object> entry : channels.entrySet())
         {
-            for (Map.Entry<String, JsonValue> entry : channelsJson.entrySet())
+            String channelName = entry.getKey();
+            if (!channelName.endsWith("_replies"))
             {
-                String channelName = entry.getKey();
-                if (!channelName.endsWith("_replies"))
-                {
-                    processChannel(channelName, entry.getValue(), context);
-                }
+                injectChannel(builder, channelName, (Channel) entry.getValue());
             }
         }
+
+        return builder;
     }
 
-    private void parseMessagesAndSchemas(
-        BuildContext context) throws JsonProcessingException
-    {
-        JsonObject componentsJson = context.kafkaJson.getJsonObject("components");
-        if (componentsJson != null)
-        {
-            JsonObject msgs = componentsJson.getJsonObject("messages");
-            JsonObject schs = componentsJson.getJsonObject("schemas");
-            buildMessagesAndSchemas(msgs, schs, context);
-        }
-    }
-
-    private void buildSecurity(
-        BuildContext context)
+    private <C> AsyncapiSpecBuilder<C> injectComponents(
+        AsyncapiSpecBuilder<C> builder)
     {
         if (!scopes.isEmpty())
         {
@@ -147,78 +147,19 @@ public class HttpAsyncApiBuilder
                 .flows(new OAuthFlows())
                 .scopes(scopes)
                 .build();
-            Map<String, Object> sec = Map.of("httpOauth", scheme);
-            context.components.setSecuritySchemes(sec);
-        }
-    }
-
-    private String finalizeSpec(
-        BuildContext context) throws JsonProcessingException
-    {
-        AsyncAPI api = new AsyncAPI();
-        api.setAsyncapi("3.0.0");
-        api.setInfo(context.info);
-        api.setServers(context.servers);
-        api.setComponents(context.components);
-        api.setChannels(context.channels);
-        api.setOperations(context.operations);
-        ObjectMapper mapper = new ObjectMapper(new YAMLFactory()).setSerializationInclusion(NON_NULL);
-        return mapper.writeValueAsString(api);
-    }
-
-    private Map<String, Object> buildServers()
-    {
-        boolean secure = true;
-        Reference securityRef = new Reference("#/components/securitySchemes/httpOauth");
-        Server server = new Server();
-        server.setHost("localhost:8080");
-        server.setProtocol("http");
-        if (secure)
-        {
-            server.setSecurity(List.of(securityRef));
+            Map<String, Object> security = Map.of("httpOauth", scheme);
+            builder.components(Components.builder()
+                .securitySchemes(security)
+                .build());
         }
 
-        return Map.of("http", server);
-    }
-
-    private Info buildInfo()
-    {
-        Info i = new Info();
-        i.setTitle("API Document for REST APIs");
-        i.setVersion("1.0.0");
-        License license = new License("Aklivity Community License",
-            "https://github.com/aklivity/zillabase/blob/develop/LICENSE");
-        i.setLicense(license);
-        return i;
-    }
-
-    private void processChannel(
-        String channelName,
-        JsonValue channelVal,
-        BuildContext ctx) throws JsonProcessingException, ExecutionException, InterruptedException
-    {
-        String name = matcher.reset(channelName).replaceFirst(m -> m.group(2));
-        String label = name.toUpperCase();
-        addReadWriteScopes(label);
-        createChannels(name, label, channelVal, ctx);
-
-        boolean compact = isCompactTopic(channelVal);
-        generateHttpOperations(ctx, name, label, compact);
-    }
-
-    private void addReadWriteScopes(
-        String label)
-    {
-        String base = label.toLowerCase();
-        scopes.add(base + ":read");
-        scopes.add(base + ":write");
+        return builder;
     }
 
     private void createChannels(
         String name,
         String label,
-        JsonValue val,
-        BuildContext ctx) throws JsonProcessingException
+        JsonValue val) throws JsonProcessingException
     {
         Map<String, Object> messagesRef = new HashMap<>();
         Map<String, Object> itemMessagesRef = new HashMap<>();
@@ -249,6 +190,51 @@ public class HttpAsyncApiBuilder
         ctx.channels.put(name + "-stream-identity", channel);
     }
 
+    private void parseMessagesAndSchemas(
+        BuildContext context) throws JsonProcessingException
+    {
+        JsonObject componentsJson = context.kafkaJson.getJsonObject("components");
+        if (componentsJson != null)
+        {
+            JsonObject msgs = componentsJson.getJsonObject("messages");
+            JsonObject schs = componentsJson.getJsonObject("schemas");
+            buildMessagesAndSchemas(msgs, schs, context);
+        }
+    }
+
+    private <C> AsyncapiSpecBuilder<C> injectChannel(
+        AsyncapiSpecBuilder<C> builder,
+        String channelName,
+        Channel channel)
+    {
+        String name = matcher.reset(channelName).replaceFirst(m -> m.group(2));
+        String label = name.toUpperCase();
+
+        addReadWriteScopes(label);
+        createChannels(name, label, channel, ctx);
+
+        return builder;
+    }
+
+    private <C> AsyncapiSpecBuilder<C> injectOperations(
+        AsyncapiSpecBuilder<C> builder,
+        AsyncAPI kafkaApi)
+    {
+        boolean compact = isTopicCompact(channel);
+
+        injectHttpOperations(builder, name, label, compact);
+
+        return builder;
+    }
+
+    private void addReadWriteScopes(
+        String label)
+    {
+        String base = label.toLowerCase();
+        scopes.add(base + ":read");
+        scopes.add(base + ":write");
+    }
+
     private void populateMessageReferences(
         JsonValue val,
         Map<String, Object> messagesRef,
@@ -271,126 +257,145 @@ public class HttpAsyncApiBuilder
         }
     }
 
-    private boolean isCompactTopic(
-        JsonValue channelVal)
+    private boolean isTopicCompact(
+        Channel channel)
     {
         boolean compact = false;
-        JsonObject binding = channelVal.asJsonObject().getJsonObject("bindings");
+        Map<String, Object> bindings = channel.getBindings();
 
-        if (binding != null && binding.containsKey("kafka"))
+        KafkaChannelBinding kafka = bindings != null
+            ? (KafkaChannelBinding) bindings.get("kafka")
+            : null;
+
+        if (kafka != null && kafka.getTopicConfiguration() != null)
         {
-            JsonObject k = binding.getJsonObject("kafka");
-            JsonObject cfg = k.getJsonObject("topicConfiguration");
-            if (cfg != null)
-            {
-                JsonArray policies = cfg.getJsonArray("cleanup.policy");
-                if (policies != null)
-                {
-                    for (JsonValue policy : policies)
-                    {
-                        if ("compact".equals(policy.toString().replace("\"", "")))
-                        {
-                            compact = true;
-                            break;
-                        }
-                    }
-                }
-            }
+            List<KafkaChannelTopicCleanupPolicy> cleanupPolicy = kafka
+                .getTopicConfiguration()
+                .getCleanupPolicy();
+
+            compact = cleanupPolicy != null && cleanupPolicy.stream().anyMatch("compact"::equals);
         }
 
         return compact;
     }
 
-    private void generateHttpOperations(
-        BuildContext ctx,
-        String name,
-        String label,
-        boolean compact) throws JsonProcessingException, ExecutionException, InterruptedException
-    {
-        String identity = resolveIdentityField(label);
-        createPostOperation(ctx, name, label, compact);
-
-        if (compact)
-        {
-            createPutOperation(ctx, name, label);
-        }
-
-        createGetOperations(ctx, name, label, identity);
-        createSseOperations(ctx, name, label, identity);
-    }
-
-    private String resolveIdentityField(
-        String label) throws ExecutionException, InterruptedException, JsonProcessingException
-    {
-        String found = null;
-        List<KafkaTopicSchemaRecord> records = kafkaHelper.resolve();
-        for (KafkaTopicSchemaRecord r : records)
-        {
-            if (label.equals(r.label))
-            {
-                found = ("protobuf".equals(r.type))
-                    ? kafkaHelper.extractIdentityFieldFromProtobufSchema(r.schema)
-                    : kafkaHelper.extractIdentityFieldFromSchema(r.schema);
-                break;
-            }
-        }
-        return found;
-    }
-
-    private void createPostOperation(
-        BuildContext ctx,
+    private <C> AsyncapiSpecBuilder<C> injectHttpOperations(
+        AsyncapiSpecBuilder<C> builder,
         String name,
         String label,
         boolean compact)
     {
-        Operation op = new Operation();
-        op.setAction(OperationAction.SEND);
-        op.setChannel(new Reference("#/channels/" + name));
-        op.setMessages(Collections.singletonList(
-            new Reference("#/channels/" + name + "/messages/" + label + "Message")));
-        HTTPOperationBinding http = new HTTPOperationBinding();
-        http.setMethod(POST);
-        Map<String, Object> b = new HashMap<>();
-        b.put("http", http);
-        ZillaHttpOperationBinding zilla = new ZillaHttpOperationBinding(POST,
-            Map.of("zilla:identity", "{identity}"), null);
-        b.put("x-zilla-http-kafka", zilla);
-        op.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
-        op.setBindings(b);
-        String n = compact ? "do" + label + "Create" : "do" + label;
-        ctx.operations.put(n, op);
+        String identity = resolveIdentityField(label);
+        injectPostOperation(builder, name, label, compact);
+
+        if (compact)
+        {
+            injectPutOperation(ctx, name, label);
+        }
+
+        injectGetOperations(ctx, name, label, identity);
+        injectSseOperations(ctx, name, label, identity);
+
+        return builder;
     }
 
-    private void createPutOperation(
-        BuildContext ctx,
+    private String resolveIdentityField(
+        String label)
+    {
+        String identity = null;
+        try
+        {
+            identity = kafkaHelper.resolve()
+                .stream()
+                .filter(r -> label.equals(r.label))
+                .findFirst()
+                .map(r -> "protobuf".equals(r.type)
+                    ? kafkaHelper.extractIdentityFieldFromProtobufSchema(r.schema)
+                    : kafkaHelper.extractIdentityFieldFromSchema(r.schema))
+                .orElse(null);
+        }
+        catch (Exception e)
+        {
+            System.out.println("Failed to resolve identity field for: " + label);
+        }
+
+        return identity;
+    }
+
+    private <C> AsyncapiSpecBuilder<C> injectPostOperation(
+        AsyncapiSpecBuilder<C> builder,
+        String name,
+        String label,
+        boolean compact)
+    {
+        Operation op = Operation.builder()
+            .action(OperationAction.SEND)
+            .channel(new Reference("#/channels/%s".formatted(name)))
+            .messages(Collections.singletonList(
+                new Reference("#/channels/%s/messages/%sMessage".formatted(name, label))))
+            .build();
+
+        HTTPOperationBinding http = HTTPOperationBinding.builder()
+            .method(POST)
+            .build();
+
+        Map<String, Object> bindings = new HashMap<>();
+        bindings.put("http", http);
+
+        ZillaHttpOperationBinding zilla = new ZillaHttpOperationBinding(POST,
+            Map.of("zilla:identity", "{identity}"), null);
+        bindings.put("x-zilla-http-kafka", zilla);
+
+        op.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
+        op.setBindings(bindings);
+        String opName = compact ? "do%sCreate".formatted(label) : "do%s".formatted(label);
+
+        builder.addOperation(opName, op);
+
+        return builder;
+    }
+
+    private <C> AsyncapiSpecBuilder<C> injectPutOperation(
+        AsyncapiSpecBuilder<C> builder,
         String name,
         String label)
     {
-        Operation op = new Operation();
-        op.setAction(OperationAction.SEND);
-        op.setChannel(new Reference("#/channels/" + name + "-item"));
-        op.setMessages(Collections.singletonList(
-            new Reference("#/channels/" + name + "-item/messages/" + label + "Message")));
-        HTTPOperationBinding put = new HTTPOperationBinding();
-        put.setMethod(PUT);
-        Map<String, Object> b = new HashMap<>();
-        b.put("http", put);
+        Operation op = Operation.builder()
+            .action(OperationAction.SEND)
+            .channel(new Reference("#/channels/%s-item".formatted(name)))
+            .messages(Collections.singletonList(
+                new Reference("#/channels/%s-item/messages/%sMessage".formatted(name, label + "Message"))))
+            .build();
+
+        HTTPOperationBinding put = HTTPOperationBinding.builder()
+            .method(PUT)
+            .build();
+        Map<String, Object> bindings = new HashMap<>();
+        bindings.put("http", put);
+
         ZillaHttpOperationBinding zilla = new ZillaHttpOperationBinding(PUT,
             Map.of("zilla:identity", "{identity}"), null);
-        b.put("x-zilla-http-kafka", zilla);
+        bindings.put("x-zilla-http-kafka", zilla);
         op.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
-        op.setBindings(b);
-        ctx.operations.put("do" + label + "Update", op);
+        op.setBindings(bindings);
+
+        String opName = "do%sUpdate".formatted(label);
+
+        builder.addOperation(opName, op);
+
+        return builder;
     }
 
-    private void createGetOperations(
-        BuildContext ctx,
+    private <C> AsyncapiSpecBuilder<C> injectGetOperations(
+        AsyncapiSpecBuilder<C> builder,
         String name,
         String label,
         String identity)
     {
-        HTTPOperationBinding get = new HTTPOperationBinding();
-        get.setMethod(GET);
+        HTTPOperationBinding get = HTTPOperationBinding.builder()
+            .method(GET)
+            .build();
+
         Map<String, Object> base = new HashMap<>();
         base.put("http", get);
         if (identity != null)
@@ -400,51 +405,66 @@ public class HttpAsyncApiBuilder
             ZillaHttpOperationBinding zh = new ZillaHttpOperationBinding(GET, null, List.of(f));
             base.put("x-zilla-http-kafka", zh);
         }
-        Operation all = new Operation();
-        all.setAction(OperationAction.RECEIVE);
-        all.setChannel(new Reference("#/channels/" + name));
-        all.setMessages(List.of(
-            new Reference("#/channels/" + name + "/messages/" + label + "Messages")));
-        all.setBindings(base);
-        all.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
-        ctx.operations.put("on" + label + "Get", all);
-        Operation item = new Operation();
-        item.setAction(OperationAction.RECEIVE);
-        item.setChannel(new Reference("#/channels/" + name + "-item"));
-        item.setMessages(List.of(
-            new Reference("#/channels/" + name + "-item/messages/" + label + "Message")));
-        item.setBindings(base);
-        item.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
-        ctx.operations.put("on" + label + "GetItem", item);
+
+        Operation allGetOp = Operation.builder()
+            .action(OperationAction.RECEIVE)
+            .channel(new Reference("#/channels/" + name))
+            .messages(Collections.singletonList(
+                new Reference("#/channels/" + name + "/messages/" + label + "Messages")))
+            .bindings(base)
+            .security(List.of(new Reference("#/components/securitySchemes/httpOauth")))
+            .build();
+
+        String allOpName = "on%sGet".formatted(label);
+        builder.addOperation(allOpName, allGetOp);
+
+        Operation item = Operation.builder()
+            .action(OperationAction.RECEIVE)
+            .channel(new Reference("#/channels/" + name + "-item"))
+            .messages(Collections.singletonList(
+                new Reference("#/channels/" + name + "-item/messages/" + label + "Message")))
+            .bindings(base)
+            .security(List.of(new Reference("#/components/securitySchemes/httpOauth")))
+            .build();
+
+        String itemOpName = "on%sGetItem".formatted(label);
+        builder.addOperation(itemOpName, item);
+
+        return builder;
     }
 
-    private void createSseOperations(
-        BuildContext ctx,
+    private <C> AsyncapiSpecBuilder<C> injectSseOperations(
+        AsyncapiSpecBuilder<C> builder,
         String name,
         String label,
         String identity)
     {
         ZillaSseOperationBinding sse = new ZillaSseOperationBinding();
-        Operation item = new Operation();
-        item.setAction(OperationAction.RECEIVE);
-        item.setChannel(new Reference("#/channels/" + name + "-stream-identity"));
-        item.setMessages(List.of(
-            new Reference("#/channels/" + name + "-stream-identity/messages/" + label + "Message")));
-        AsyncapiKafkaFilter sf = new AsyncapiKafkaFilter();
+        Operation.OperationBuilder item = Operation.builder()
+            .action(OperationAction.RECEIVE)
+            .channel(new Reference("#/channels/%s-stream-identity".formatted(name)))
+            .messages(Collections.singletonList(
+                new Reference("#/channels/%s-stream-identity/messages/%sMessage".formatted(name, label))));
+
+        AsyncapiKafkaFilter filter = new AsyncapiKafkaFilter();
         if (identity != null)
         {
-            sf.key = "{identity}";
+            filter.key = "{identity}";
         }
-        ZillaSseKafkaOperationBinding sskb = new ZillaSseKafkaOperationBinding(List.of(sf));
-        Map<String, Object> ib = Map.of("x-zilla-sse", sse, "x-zilla-sse-kafka", sskb);
-        item.setBindings(ib);
-        item.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
-        ctx.operations.put("on" + label + "ReadItem", item);
-        Operation all = new Operation();
-        all.setAction(OperationAction.RECEIVE);
-        all.setChannel(new Reference("#/channels/" + name + "-stream"));
-        all.setMessages(List.of(
-            new Reference("#/channels/" + name + "-stream/messages/" + label + "Message")));
+        item
+            .bindings(Map.of("x-zilla-sse", sse,
+                "x-zilla-sse-kafka", new ZillaSseKafkaOperationBinding(List.of(filter))))
+            .security(List.of(new Reference("#/components/securitySchemes/httpOauth")));
+        String itemOpName = "on%sReadItem".formatted(label);
+        builder.addOperation(itemOpName, item.build());
+
+        Operation allOp = Operation.builder()
+            .action(OperationAction.RECEIVE)
+            .channel(new Reference("#/channels/%s-stream".formatted(name)))
+            .messages(Collections.singletonList(
+                new Reference("#/channels/%s-stream/messages/%sMessages".formatted(name, label))))
+            .build();
+
         Map<String, Object> ab = new HashMap<>();
         ab.put("x-zilla-sse", sse);
         if (identity != null)
@@ -454,15 +474,17 @@ public class HttpAsyncApiBuilder
             ZillaSseKafkaOperationBinding sseAll = new ZillaSseKafkaOperationBinding(List.of(cf));
             ab.put("x-zilla-sse-kafka", sseAll);
         }
-        all.setBindings(ab);
-        all.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
-        ctx.operations.put("on" + label + "Read", all);
+        allOp.setBindings(ab);
+        allOp.setSecurity(List.of(new Reference("#/components/securitySchemes/httpOauth")));
+        String allOpName = "on%sRead".formatted(label);
+        builder.addOperation(allOpName, allOp);
+
+        return builder;
     }
 
     private void buildMessagesAndSchemas(
         JsonObject msgs,
-        JsonObject schs,
-        BuildContext ctx) throws JsonProcessingException
+        JsonObject schs) throws JsonProcessingException
     {
         ObjectMapper m = new ObjectMapper();
         if (msgs != null)
@@ -504,15 +526,27 @@ public class HttpAsyncApiBuilder
         }
     }
 
-    private static final class BuildContext
+    private AsyncAPI deserializeAsyncapi(
+        String yaml) throws Exception
     {
-        private Components components;
-        private Map<String, Object> servers;
-        private Info info;
-        private JsonObject kafkaJson;
-        private Map<String, Object> channels;
-        private Map<String, Object> operations;
-        private Map<String, Object> messages;
-        private Map<String, Object> schemas;
+        ObjectMapper yamlMapper = new ObjectMapper(new YAMLFactory());
+        return yamlMapper.readValue(yaml, AsyncAPI.class);
+    }
+
+    private String buildYaml(
+        AsyncapiSpec spec) throws Exception
+    {
+        AsyncAPI asyncAPI = AsyncAPI.builder()
+            .asyncapi(spec.version)
+            .info(spec.info)
+            .servers(spec.servers)
+            .components(spec.components)
+            .channels(spec.channels)
+            .operations(spec.operations)
+            .build();
+        ObjectMapper yamlMapper = new ObjectMapper(new YAMLFactory());
+        yamlMapper.setSerializationInclusion(NON_NULL);
+
+        return yamlMapper.writeValueAsString(asyncAPI);
     }
 }
